Bug 207521 - REGRESSION (r256009): [ Mojave wk2 Debug ] ASSERTION FAILED: Completion handler should always be called under WebKit::WebMDNSRegister::PendingRegistration
Summary: REGRESSION (r256009): [ Mojave wk2 Debug ] ASSERTION FAILED: Completion handl...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebRTC (show other bugs)
Version: WebKit Nightly Build
Hardware: Mac Unspecified
: P2 Normal
Assignee: youenn fablet
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2020-02-10 16:44 PST by Jason Lawrence
Modified: 2020-02-11 10:26 PST (History)
6 users (show)

See Also:


Attachments
Patch (3.56 KB, patch)
2020-02-11 06:29 PST, youenn fablet
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jason Lawrence 2020-02-10 16:44:16 PST
webrtc/peerconnection-page-cache-long.html

Description:
This test is crashing on Mojave wk2 Debug. It appears to have started with r256009.

History:
https://results.webkit.org/?suite=layout-tests&test=webrtc%2Fpeerconnection-page-cache-long.html&platform=mac&limit=50000

Crash log:
https://build.webkit.org/results/Apple%20Mojave%20Debug%20WK2%20(Tests)/r256214%20(7465)/webrtc/peerconnection-page-cache-long-crash-log.txt
Comment 1 Radar WebKit Bug Importer 2020-02-10 16:44:33 PST
<rdar://problem/59331313>
Comment 2 Jason Lawrence 2020-02-10 16:50:49 PST
I have marked the test as crashing while this issue is investigated.
https://trac.webkit.org/changeset/256231/webkit
Comment 3 Ryan Haddad 2020-02-10 17:13:32 PST
ASSERTION FAILED: Completion handler should always be called
!m_function
/Volumes/Data/slave/mojave-debug/build/WebKitBuild/Debug/usr/local/include/wtf/CompletionHandler.h(53) : WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<WTF::String, WebCore::MDNSRegisterError> &&)>::~CompletionHandler()
1   0x203850ff9 WTFCrash
2   0x102ba6f13 WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<WTF::String, WebCore::MDNSRegisterError>&&)>::~CompletionHandler()
3   0x102ba6ea5 WTF::CompletionHandler<void (std::experimental::fundamentals_v3::expected<WTF::String, WebCore::MDNSRegisterError>&&)>::~CompletionHandler()
4   0x102ba73fc WebKit::WebMDNSRegister::PendingRegistration::~PendingRegistration()
5   0x102ba73c5 WebKit::WebMDNSRegister::PendingRegistration::~PendingRegistration()
6   0x102ce5d5b WebKit::WebMDNSRegister::finishedRegisteringMDNSName(unsigned long long, std::experimental::fundamentals_v3::expected<WTF::String, WebCore::MDNSRegisterError>&&)
7   0x102fe6b66 void IPC::callMemberFunctionImpl<WebKit::WebMDNSRegister, void (WebKit::WebMDNSRegister::*)(unsigned long long, std::experimental::fundamentals_v3::expected<WTF::String, WebCore::MDNSRegisterError>&&), std::__1::tuple<unsigned long long, std::experimental::fundamentals_v3::expected<WTF::String, WebCore::MDNSRegisterError> >, 0ul, 1ul>(WebKit::WebMDNSRegister*, void (WebKit::WebMDNSRegister::*)(unsigned long long, std::experimental::fundamentals_v3::expected<WTF::String, WebCore::MDNSRegisterError>&&), std::__1::tuple<unsigned long long, std::experimental::fundamentals_v3::expected<WTF::String, WebCore::MDNSRegisterError> >&&, std::__1::integer_sequence<unsigned long, 0ul, 1ul>)
8   0x102fe45b0 void IPC::callMemberFunction<WebKit::WebMDNSRegister, void (WebKit::WebMDNSRegister::*)(unsigned long long, std::experimental::fundamentals_v3::expected<WTF::String, WebCore::MDNSRegisterError>&&), std::__1::tuple<unsigned long long, std::experimental::fundamentals_v3::expected<WTF::String, WebCore::MDNSRegisterError> >, std::__1::integer_sequence<unsigned long, 0ul, 1ul> >(std::__1::tuple<unsigned long long, std::experimental::fundamentals_v3::expected<WTF::String, WebCore::MDNSRegisterError> >&&, WebKit::WebMDNSRegister*, void (WebKit::WebMDNSRegister::*)(unsigned long long, std::experimental::fundamentals_v3::expected<WTF::String, WebCore::MDNSRegisterError>&&))
9   0x102fe447d void IPC::handleMessage<Messages::WebMDNSRegister::FinishedRegisteringMDNSName, WebKit::WebMDNSRegister, void (WebKit::WebMDNSRegister::*)(unsigned long long, std::experimental::fundamentals_v3::expected<WTF::String, WebCore::MDNSRegisterError>&&)>(IPC::Decoder&, WebKit::WebMDNSRegister*, void (WebKit::WebMDNSRegister::*)(unsigned long long, std::experimental::fundamentals_v3::expected<WTF::String, WebCore::MDNSRegisterError>&&))
10  0x102fe432c WebKit::WebMDNSRegister::didReceiveMessage(IPC::Connection&, IPC::Decoder&)
11  0x102c97d6b WebKit::NetworkProcessConnection::didReceiveMessage(IPC::Connection&, IPC::Decoder&)
12  0x1019af309 IPC::Connection::dispatchMessage(IPC::Decoder&)
13  0x1019afc71 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)
14  0x1019b0323 IPC::Connection::dispatchOneIncomingMessage()
15  0x1019cf54b IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_7::operator()()
16  0x1019cf469 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_7, void>::call()
17  0x20387b88a WTF::Function<void ()>::operator()() const
18  0x2038f21e3 WTF::RunLoop::performWork()
19  0x2038f392e WTF::RunLoop::performWork(void*)
20  0x7fff33078683 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__
21  0x7fff33078629 __CFRunLoopDoSource0
22  0x7fff3305bfeb __CFRunLoopDoSources0
23  0x7fff3305b5b5 __CFRunLoopRun
24  0x7fff3305aebe CFRunLoopRunSpecific
25  0x7fff352bf7df -[NSRunLoop(NSRunLoop) runMode:beforeDate:]
26  0x7fff352bf6b4 -[NSRunLoop(NSRunLoop) run]
27  0x7fff5f1ea077 _xpc_objc_main
28  0x7fff5f1e9b79 _xpc_copy_xpcservice_dictionary
29  0x10219fdd5 WebKit::XPCServiceMain(int, char const**)
30  0x103374bbb WKXPCServiceMain
31  0x10192fea2 main
LEAK: 1 WebPageProxy
Comment 4 youenn fablet 2020-02-11 06:29:20 PST
Created attachment 390358 [details]
Patch
Comment 5 WebKit Commit Bot 2020-02-11 10:26:15 PST
The commit-queue encountered the following flaky tests while processing attachment 390358 [details]:

editing/spelling/spellcheck-attribute.html bug 206178 (authors: g.czajkowski@samsung.com, mark.lam@apple.com, and rniwa@webkit.org)
The commit-queue is continuing to process your patch.
Comment 6 WebKit Commit Bot 2020-02-11 10:26:56 PST
Comment on attachment 390358 [details]
Patch

Clearing flags on attachment: 390358

Committed r256317: <https://trac.webkit.org/changeset/256317>
Comment 7 WebKit Commit Bot 2020-02-11 10:26:57 PST
All reviewed patches have been landed.  Closing bug.